--- a/index.html
+++ b/index.html
@@ -6,8 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Four Card Feature Section</title>
+    <script src="https://kit.fontawesome.com/b2721d4fd7.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div id="top-article">
+        <h1>Reliable, efficient. delievery</h1>
+        <h1>Powered by Technology</h1>
+        <p>Our artificial intelligence powered tools use millions of project data<br> points to ensure that your project is successful</p>
+    </div>
+    <div id="cards-section">
+        <div class="card">
+            <h3>Supervisor</h3>
+            <p>Monitors activity to identify project<br> roadblocks</p>
+        </div>
+        <div class="card">
+            <h3>Team Builder</h3>
+            <p>Scans our talent network to create the<br> optimal team for your project</p>
+        </div>
+        <div class="card">
+            <h3>Karma</h3>
+            <p>Regularly evaluates our talent to<br> ensure quality</p>
+        </div>
+        <div class="card">
+            <h3>Calculator</h3>
+            <p>Uses data from past projects to<br> provide better delievery estimates</p>
+        </div>
+    </div>
 </body>
 </html>
