--- a/index.html
+++ b/index.html
@@ -22,26 +22,26 @@
     <div id="cards-section">
         <div class="card supervisor-card col-1">
             <h3>Supervisor</h3>
-            <h6>Monitors activity to identify project<br> roadblocks</h6>
+            <h6>Monitors activity to identify project roadblocks</h6>
             <i class="fa-solid fa-magnifying-glass icon"></i>
         </div>
 
         <div class="col-2">
         <div class="card team-builder-card" >
             <h3>Team Builder</h3>
-            <h6>Scans our talent network to create the<br> optimal team for your project</h6>
+            <h6>Scans our talent network to create the optimal team for your project</h6>
             <i class="fa-solid fa-window-maximize icon"></i>
         </div>
         <div class="card karma-card">
             <h3>Karma</h3>
-            <h6>Regularly evaluates our talent to<br> ensure quality</h6>
+            <h6>Regularly evaluates our talent to ensure quality</h6>
             <i class="fa-solid fa-lightbulb icon"></i>
         </div>
         </div>
 
         <div class="card calculator-card col-3">
             <h3>Calculator</h3>
-            <h6>Uses data from past projects to<br> provide better delievery estimates</h6>
+            <h6>Uses data from past projects to provide better delievery estimates</h6>
             <i class="fa-solid fa-desktop icon"></i>
         </div>
     </div>
